--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
 </head>
 <body>
-    <h1>Calendar: April - June 2025</h1>
+    <h1>Making Waves Session Generator</h1>
     <form>
         <label>On what date does this session begin?</label>
         <input id="startDate" type="date" required></input>
